# simpleai

./: CHANGELOG.md  README.md  ai_settings.example.json  django_settings_example.py  pyproject.toml
simpleai/: __init__.py  api.py  exceptions.py  provider_smoke.py  schema.py  settings.py
simpleai/adapters/: anthropic_adapter.py  gemini_adapter.py  grok_adapter.py  logging_adapter.py  openai_adapter.py  perplexity_adapter.py
simpleai/settings_examples/: ai_settings.example.json  django_settings_example.py
tests/: test_adapters.py  test_error_formatting_repro.py  test_provider_smoke.py  test_run_prompt.py
